# teller

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .golangci.yml  .goreleaser.yml  .teller.example.yml  .teller.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  MAINTAINERS.md  Makefile  README.md  ROADMAP.md  best-practices.md  go.mod  go.sum  install.ps1  install.sh  main.go  package.json  release.toml  rustfmt.toml  rustwrap.yaml  secret2  template.go
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_provider.md
.github/workflows/: build.yml  ci.yml  release.yaml  release.yml  spectral.yaml
.github/workflows/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general.md  new_provider.md
.spectral/: spectral.yaml
doc/: new-provider.md
e2e/: README.md  e2e_test.go
e2e/register/: interface.go  register.go
e2e/tests/: custom-config-file.yml  delete.yml  json.yml  put-sync.yml  put.yml  redact.yml  run-redact.yml  scan.yml  sh.yml  show.yml  version.go  yaml.yml
e2e/testutils/: config.go  diff.go  exec.go
examples/providers/: example.go
fixtures/mirror-drift/: target.env  teller.yml
fixtures/providers-export/: providers-meta.json
fixtures/sync/: source.env  target2.env  teller.yml
pkg/: porcelain.go  porcelain_test.go  provider_test.go  providers.go  redactor.go  redactor_test.go  teller.go  teller_test.go  tellerfile.go  templating.go  templating_test.go  wizard_template.go
pkg/core/: populate.go  populate_test.go  types.go
pkg/integration_test/: consul_test.go  dotenv_test.go  etcd_test.go  heroku_test.go  vault_test.go
pkg/logging/: logging.go  logging_test.go
pkg/providers/: ansible_vault.go  ansible_vault_test.go  aws_secretsmanager.go  aws_secretsmanager_test.go  aws_ssm.go  aws_ssm_test.go  azure_keyvault.go  azure_keyvault_test.go  cloudflare_workers_kv.go  cloudflare_workers_kv_test.go  cloudflare_workers_secrets.go  cloudflare_workers_secrets_test.go  consul.go  consul_test.go  cyberark_conjur.go  doppler.go  doppler_test.go  dotenv.go  dotenv_test.go  enpass.go  enpass_test.go  etcd.go  etcd_test.go  export.go  export_test.go  filesystem.go  filesystem_test.go  github.go  github_test.go  google_secretmanager.go  google_secretmanager_test.go  gopass.go  gopass_test.go  hashicorp_vault.go  hashicorp_vault_test.go  helpers_test.go  heroku.go  heroku_test.go  keeper_secretsmanager.go  keeper_secretsmanager_test.go  (+16 more)
pkg/providers/mock_providers/: ansible_vault_mock.go  aws_secretsmanager_mock.go  aws_ssm_mock.go  azure_keyvault_mock.go  cloudflare_workers_kv_mock.go  cloudflare_workers_secrets_mock.go  consul_mock.go  cyberark_conjur_mock.go  doppler_mock.go  dotenv_mock.go  enpass_mock.go  etcd_mock.go  github_mock.go  google_secretmanager_mock.go  gopass_mock.go  hashicorp_vault_mock.go  heroku_mock.go  keeper_secretsmanager_mock.go  keypass.kdbx  mac_keychain_darwin_mock.go  onepassword_mock.go  secretfile_mock.go  vercel_mock.go
pkg/tfa/: tfa.go  types.go
pkg/tfa/auth/sudo/: sudo_darwin.go  sudo_linux.go  sudo_windows.go
pkg/tfa/auth/touchid/: touchid_darwin.go  touchid_linux.go  touchid_windows.go
pkg/utils/: files.go  strings.go
teller-cli/: Cargo.toml
teller-cli/fixtures/: config.yml  dotenv.yml  flow.env  flow_test.yml  flow_test_vars.env  google_sm_integration.yml  hashi.yml  smoke.yml  vars.env
teller-cli/fixtures/scan/: has-matches.txt  multiple.txt  no-matches.txt
teller-cli/fixtures/scan/nested/: nested-match.txt
teller-cli/src/: cli.rs  io.rs  lib.rs  new.rs  scan.rs  wizard.rs
teller-cli/tests/: cli_tests.rs  flow_test.rs
teller-cli/tests/cmd/: copy.trycmd  delete.trycmd  export.trycmd  new.trycmd  put.trycmd  redact.trycmd  run.trycmd  scan.trycmd  template.trycmd
teller-cli/tests/cmd/copy.in/: .teller.yml  source.env  target.env
teller-cli/tests/cmd/delete.in/: new.env  teller.yml
teller-cli/tests/cmd/export.in/: two.env
teller-cli/tests/cmd/put.in/: new.env
teller-cli/tests/cmd/redact.in/: one.env  text.txt
teller-cli/tests/cmd/run.in/: index.js
teller-cli/tests/cmd/scan.in/: one.env
teller-cli/tests/cmd/template.in/: .teller.yml  config-templ.t
teller-cli/tests/snapshots/: flow_test__flow-test-dot-0.snap  flow_test__flow-test-hashi-0.snap  flow_test__flow-test-smgr-0.snap  flow_test__flow-test-ssm-0.snap
teller-core/: .gitattributes  Cargo.toml
teller-core/fixtures/: config.yml
teller-core/src/: config.rs  exec.rs  export.rs  io.rs  lib.rs  redact.rs  scan.rs  teller.rs  template.rs
teller-core/src/snapshots/: teller_core__config__tests__can_render_template_config.snap  teller_core__config__tests__load_config.snap  teller_core__exec__tests__run_echo.snap  teller_core__scan__tests__scan-3.snap  teller_core__scan__tests__scan.snap  teller_core__template__tests__render_template.snap
teller-providers/: Cargo.toml
teller-providers/src/: config.rs  lib.rs  registry.rs
teller-providers/src/providers/: aws_secretsmanager.rs  dotenv.rs  etcd.rs  external.rs  google_secretmanager.rs  hashicorp_consul.rs  hashicorp_vault.rs  inmem.rs  mod.rs  ssm.rs  test_utils.rs
teller-providers/src/providers/snapshots/: teller_providers__providers__test_utils__[del-secret_multiple_app-1].snap  teller_providers__providers__test_utils__[get-after-update-secret_multiple_app-2].snap  teller_providers__providers__test_utils__[get-del-keys-secret_development].snap  teller_providers__providers__test_utils__[get-secret_development].snap  teller_providers__providers__test_utils__[get-secret_multiple_app-1].snap  teller_providers__providers__test_utils__[get-secret_multiple_app-2].snap  teller_providers__providers__test_utils__[get-secret_multiple_lotsakeys].snap  teller_providers__providers__test_utils__[get-selective-db].snap  teller_providers__providers__test_utils__[put-secret_development].snap  teller_providers__providers__test_utils__[put-secret_multiple_lotsakeys].snap  teller_providers__providers__test_utils__[put-update-secret_multiple_app-2].snap
xtask/: Cargo.toml
xtask/src/: main.rs
