[package]
name = "teller"
version = "2.0.1"
edition = "2021"
description = "A developer-first multi provider secret manager"
authors = ["Dotan Nahum <dotan@rng0.io>", "Elad Kaplan <kaplan.elad@gmail.com>"]
documentation = "https://docs.rs/teller/"
repository = "https://github.com/tellerops/teller"
keywords = ["vault", "secret", "devtool"]
license = "Apache-2.0"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde_derive = { workspace = true }
fs-err = "2.9.0"
eyre = "0.6.8"
thiserror = { workspace = true }
tokio = { workspace = true }
# async-trait = "*"
tracing = "^0.1.34"
tracing-tree = { version = "0.2.1" }
tracing-subscriber = { version = "^0.3.11", features = ["env-filter"] }
strum = { workspace = true }
proc-macro2 = "1.0.63"                                                  # Remove once https://github.com/rust-lang/rust/issues/113152 is fixed.
clap = { version = "4.3.0", features = ["cargo", "derive"] }
exitcode = { version = "^1.1.2" }
console = { version = "0.15.8" }
comfy-table = { version = "7.1.1" }
dialoguer = { version = "0.11.0" }
teller-providers = { version = "*", path = "../teller-providers" }
teller-core = { version = "*", path = "../teller-core" }

[dev-dependencies]
insta = { workspace = true }
dockertest-server = { version = "0.1.7", features = ["hashi", "cloud"] }
trycmd = "0.14.10"

[[bin]]
name = "teller"
