[package]
name = "teller-core"
version = "2.0.2"
edition = "2021"
description = "A developer-first multi provider secret manager"
authors = ["Dotan Nahum <dotan@rng0.io>", "Elad Kaplan <kaplan.elad@gmail.com>"]
documentation = "https://docs.rs/teller/"
repository = "https://github.com/tellerops/teller"
keywords = ["vault", "secret", "devtool"]
license = "Apache-2.0"
readme = "../README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde_derive = { workspace = true }
serde_variant = { workspace = true }
lazy_static = { workspace = true }
strum = { workspace = true }
shell-words = "1"
duct = "0.13.6"
thiserror = { workspace = true }
fs-err = "2.9.0"
ignore = "0.4.22"
unicode-width = "0.1.12"
aho-corasick = { workspace = true }
tera = { workspace = true }
csv = "1.2.1"
teller-providers = { version = "*", path = "../teller-providers" }

[dev-dependencies]
insta = { workspace = true }
stringreader = "0.1.1"
