[package]
name = "teller-core"
version = "2.0.2"
edition = "2021"
description.workspace = true
authors.workspace = true
documentation = "https://docs.rs/teller-core/"
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde_derive = { workspace = true }
serde_variant = { workspace = true }
lazy_static = { workspace = true }
strum = { workspace = true }
shell-words = "1"
duct = "0.13.6"
thiserror = { workspace = true }
fs-err = "2.9.0"
ignore = "0.4.22"
unicode-width = "0.1.12"
aho-corasick = { workspace = true }
tera = { workspace = true }
csv = "1.2.1"
teller-providers = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
stringreader = "0.1.1"
